<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Medi Mouse</string>
    <string name="submit">Submit</string>
    <string name="crashing">Getting device info</string>
	<string name="large_download_confirm_message">
	I\'m about to download a huge file (>50MB), you might want to be on wifi.
	Press OK when you\'re ready.
	</string>
	
	<string name="no_locations_found_alert">
I don\'t know where this location is.  Would you like to find it for me?\n\n
Once you find the right location, longpress on the map to save it and other people can find it too!\n\n
If you find a location that is incorrect you can tap it and vote it down and/or select a different location.\n
	</string>
	
	<string name="location_confirmation">
	Are you sure this is the correct location?
	</string>
	
    <string name="help_about_message">\n
    created by Will Cohen \n
    source code: https://code.google.com/p/medi-mouse/ \n
    version 2.05 \n
    </string>

    <string name="help_about">About</string>
    <string name="OK">OK</string>
    
    <string name="progress_dialog_message_prefix_connecting">Connecting to</string>
    <string name="user_message_download_complete">Download complete!</string>
    <string name="user_message_download_canceled">Download canceled!</string>
    <string name="error_message_bad_url">Error: Invalid URL!</string>
    <string name="error_message_file_not_found">Error: File not found!</string>
    <string name="error_message_general">Error downloading file!</string>
    
    
    <string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="logo">Logo</string>
	
	<string name="in_out">In/Out</string>
	<string name="schedule">Schedule</string>
	<string name="people">People</string>
	<string name="logout">Logout</string>
	<string name="notes">Notes</string>
	
	<string name="refresh">Refresh</string>
	
	<string name="participants">Participants</string>
	<string name="event_list">Event List</string>
	
	<string name="lookup">Lookup</string>
	<string name="custom_divider">Quick Save</string>
	
	<string name="save">Save</string>
</resources>
