<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainFrame"
    style="@style/main_window"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:contentDescription="@string/logo"
        android:src="@drawable/medimouse"
   		android:layout_gravity="top"/>
	<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="bottom">
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        style="@style/plain_text"
		        android:text="@string/username" />
		    <EditText
		        android:id="@+id/username"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:inputType="textNoSuggestions"/>
	    </LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        style="@style/plain_text"
		        android:text="@string/password" />
	
		    <EditText
		        android:id="@+id/password"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="textPassword" />
	
	    </LinearLayout>
	    <Button
	        
	        android:id="@+id/login"
	        android:text="@string/login"
	        style="@style/menu_item"/>
		
		
	</LinearLayout>
   </FrameLayout>
