<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	style="@style/menu_item_shape">
	<TextView 
	    android:id="@+id/name"
	    android:layout_width="wrap_content"
		android:layout_height="match_parent"
		style="@style/event_text_black"/>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal">
		<TextView 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/notes"
			style="@style/event_text_black"/>
		<TextView 
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/notes_view"
			style="@style/event_text_black"/>"
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="horizontal">
		<TextView 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/participants"
			style="@style/event_text_black"/>
		<LinearLayout 
		    android:id="@+id/participants_list"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
		<TextView 
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/event_list"
			style="@style/event_text_black"/>
		<LinearLayout 
		    android:id="@+id/event_list"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"/>
	</LinearLayout>


</LinearLayout>